Add an opportunity to use 2fa with openvpn
When connect to OpenVPN server, there is an opportunity to use 2fa to do
so. Create additional configuration to automatically install and use 2fa
with any TOTP auth app.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -110,3 +110,6 @@ ldap_config:
   client_name_attribute: 'sAMAccountName'
   client_email_attribute: 'userPrincipalName'
 use_ldap: False
+enable_2fa: False
+client_2fa_dir_path: /etc/openvpn/client_2fa
+client_2fa_server_description: "{{ server_name }}"
