--- a/templates/openvpn.conf
+++ b/templates/openvpn.conf
@@ -67,3 +67,11 @@ push "{{ push }}"
 {% for config in additional_configs %}
 {{ config }}
 {% endfor %}
+{% if enable_2fa %}
+reneg-sec 0
+{% if ansible_distribution_release == 'xenial' %}
+plugin /usr/lib/openvpn/plugins/openvpn-plugin-auth-pam.so openvpn
+{% else %}
+plugin /usr/lib/x86_64-linux-gnu/openvpn/plugins/openvpn-plugin-auth-pam.so openvpn
+{% endif %}
+{% endif %}
