Ensure working Ubuntu Focal version
Easy-rsa in Ubuntu 20.04 was moved to v3 which is incompatible with
previous versions of easy-rsa shipped in Ubuntu prior to Focal. Change
deployment scripts accordingly to be able to work on Focal.

--- a/tasks/easy_rsa_prepare.yml
+++ b/tasks/easy_rsa_prepare.yml
@@ -9,6 +9,16 @@
     src: /etc/openvpn/easy-rsa/openssl-1.0.0.cnf
     dest: /etc/openvpn/easy-rsa/openssl.cnf
     state: link
+  when:
+    - ansible_distribution_release|lower != 'focal'
+
+- name: VPN | Configuration | Create link to openssl config
+  file:
+    src: /etc/openvpn/easy-rsa/openssl-easyrsa.cnf
+    dest: /etc/openvpn/easy-rsa/openssl.cnf
+    state: link
+  when:
+    - ansible_distribution_release|lower == 'focal'
 
 - name: VPN | Configuration | Change default CRL list time
   lineinfile:
