--- a/tasks/create_openvpn_user.yml
+++ b/tasks/create_openvpn_user.yml
@@ -12,10 +12,21 @@
   args:
     chdir: /etc/openvpn/easy-rsa
     creates: "/etc/openvpn/easy-rsa/keys/{{ user.name }}.crt"
-  register: user_cert
+  register: user_cert_prefocal
   tags:
     - create_users
     - openvpn_users
+  when:
+    - ansible_distribution_release|lower != 'focal'
+
+- name: VPN | Keys creation | Generate client certificates
+  shell: "./easyrsa --batch build-client-full {{ user.name }} nopass"
+  register: user_cert_focal
+  args:
+    chdir: /etc/openvpn/easy-rsa
+    creates: "/etc/openvpn/easy-rsa/pki/private/{{ user.name }}.key"
+  when:
+    - ansible_distribution_release|lower == 'focal'
 
 - name: VPN | Client config creation | Ensure user ccd file from ip-info block
   copy:
@@ -60,18 +71,50 @@
 - name: VPN | Client config creation | Register client cert
   slurp:
     src: "/etc/openvpn/easy-rsa/keys/{{ user.name }}.crt"
-  register: client_cert
+  register: client_cert_prefocal
   tags:
     - create_users
     - openvpn_users
+  when:
+    - ansible_distribution_release|lower != 'focal'
+
+- name: VPN | Client config creation | Register client cert
+  slurp:
+    src: "/etc/openvpn/easy-rsa/pki/issued/{{ user.name }}.crt"
+  register: client_cert_focal
+  tags:
+    - create_users
+    - openvpn_users
+  when:
+    - ansible_distribution_release|lower == 'focal'
+
+- name: VPN | Set fact with user cert
+  set_fact:
+    client_cert: "{% if ansible_distribution_release|lower == 'focal' %}{{ client_cert_focal }}{% else %}{{ client_cert_prefocal }}{% endif %}"
 
 - name: VPN | Client config creation | Register client key
   slurp:
     src: "/etc/openvpn/easy-rsa/keys/{{ user.name }}.key"
-  register: client_key
+  register: client_key_prefocal
   tags:
     - create_users
     - openvpn_users
+  when:
+    - ansible_distribution_release|lower != 'focal'
+
+- name: VPN | Client config creation | Register client key
+  slurp:
+    src: "/etc/openvpn/easy-rsa/pki/private/{{ user.name }}.key"
+  register: client_key_focal
+  tags:
+    - create_users
+    - openvpn_users
+  when:
+    - ansible_distribution_release|lower == 'focal'
+
+- name: VPN | Set fact with user key
+  set_fact:
+    client_key: "{% if ansible_distribution_release|lower == 'focal' %}{{ client_key_focal }}{% else %}{{ client_key_prefocal }}{% endif %}"
 
 - name: VPN | Client config creation | Generate client config
   template:
@@ -89,7 +132,7 @@
     src: /etc/openvpn/client_keys/{{ user.name }}/{{ user.name }}.ovpn
     dest: /tmp/{{ cert_prefix }}{{ user.name }}.ovpn
     flat: yes
-  when: user_cert.changed
+  when: user_cert_prefocal.changed or user_cert_focal.changed
   tags:
     - create_users
     - openvpn_users
@@ -205,7 +248,7 @@
     subject: "{{ mail.subject }}"
     body: "{{ mail.body }}"
     attach: ["/etc/openvpn/client_keys/{{ user.name }}/{{ user.name }}.ovpn"]
-  when: user.email is defined and mail.host is defined and user_cert.changed
+  when: user.email is defined and mail.host is defined and (user_cert_prefocal.changed or user_cert_focal.changed)
   failed_when: False
   tags:
     - create_users
