Update role to work in Ubuntu 22.04
Ensure vars and tasks to work in newer version of Ubuntu.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -8,7 +8,7 @@
   tags: ['openvpn_config']
 
 - name: VPN | Installation | Prepare easy-rsa scripts
-  import_tasks: easy_rsa_prepare.yml
+  import_tasks: easy_rsa_prepare_common.yml
   tags: ['easy_rsa_prepare']
 
 - name: VPN | Installation | Prepare system to be ready to be OpenVPN server
