--- a/tasks/setup_server_keys_common.yml
+++ b/tasks/setup_server_keys_common.yml
@@ -5,14 +5,7 @@
     state: directory
 
 - name: VPN | Import pre-focal tasks
-  import_tasks: setup_server_keys_pre_focal.yml
-  when:
-    - ansible_distribution_release|lower != 'focal'
-
-- name: VPN | Import focal tasks
-  import_tasks: setup_server_keys_focal.yml
-  when:
-    - ansible_distribution_release|lower == 'focal'
+  include_tasks: "setup_server_keys_{{ ansible_distribution_release|lower }}.yml"
 
 - name: VPN | Keys creation | Create tls-auth key
   command: openvpn --genkey --secret ta.key
